--- a/package.json
+++ b/package.json
@@ -14,27 +14,28 @@
 		"start2": "node build/index.js"
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/kit": "^1.5.0",
+		"@types/cookie": "^0.5.1",
 		"@types/express": "^4.17.13",
 		"@types/ws": "^8.5.3",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
+		"@vitejs/plugin-basic-ssl": "^1.0.1",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "next",
-		"tslib": "^2.3.1",
-		"@vitejs/plugin-basic-ssl": "^1.0.1",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.0",
-		"@types/cookie": "^0.5.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"tslib": "^2.3.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0"
 	},
 	"type": "module",
 	"dependencies": {
+		"@edwinspire/svelte-components": "github:edwinspire/svelte-components",
 		"@edwinspire/universal-fetch": "git+https://github.com/edwinspire/universal-fetch.git",
 		"@edwinspire/websocket_express": "github:edwinspire/websocket_express",
 		"@fontsource/fira-mono": "^4.5.0",
