--- a/package.json
+++ b/package.json
@@ -44,9 +44,10 @@
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"jsonwebtoken": "^9.0.0",
-		"pg": "^8.10.0",
+		"pg": "^8.11.0",
 		"sequelize": "^6.31.1",
 		"sqlite3": "^5.1.6",
+		"tedious": "^16.1.0",
 		"ws": "^8.8.1"
 	}
 }
