soapFunction funcionamiento básico correcto

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"jsonwebtoken": "^9.0.0",
 		"pg": "^8.11.0",
 		"sequelize": "^6.31.1",
+		"soap": "^1.0.0",
 		"sqlite3": "^5.1.6",
 		"tedious": "^16.1.0",
 		"ws": "^8.8.1"
