--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/kit": "^1.5.0",
 		"@types/cookie": "^0.5.1",
 		"@types/express": "^4.17.13",
+		"@types/jsonwebtoken": "^9.0.2",
 		"@types/ws": "^8.5.3",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
@@ -40,6 +41,7 @@
 		"@edwinspire/websocket_express": "github:edwinspire/websocket_express",
 		"@fontsource/fira-mono": "^4.5.0",
 		"@sveltejs/adapter-node": "^1.0.0-next.86",
+		"bulma": "^0.9.4",
 		"cookie": "^0.4.1",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
