Se agrega EditorView

--- a/package.json
+++ b/package.json
@@ -39,12 +39,17 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@codemirror/lang-javascript": "^6.1.9",
+		"@codemirror/lang-json": "^6.0.1",
+		"@codemirror/lang-sql": "^6.5.0",
+		"@codemirror/lint": "^6.2.2",
 		"@edwinspire/svelte-components": "github:edwinspire/svelte-components",
 		"@edwinspire/universal-fetch": "github:edwinspire/universal-fetch",
 		"@edwinspire/websocket_express": "github:edwinspire/websocket_express",
 		"@fontsource/fira-mono": "^4.5.0",
 		"@sveltejs/adapter-node": "^1.0.0-next.86",
 		"bulma": "^0.9.4",
+		"codemirror": "^6.0.1",
 		"cookie": "^0.4.1",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
