Usando D3 para crear un Plotter

--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
 		"@edwinspire/universal-fetch": "github:edwinspire/universal-fetch",
 		"@edwinspire/websocket_express": "github:edwinspire/websocket_express",
 		"@fontsource/fira-mono": "^4.5.0",
+		"@observablehq/plot": "^0.6.8",
 		"@sveltejs/adapter-node": "^1.0.0-next.86",
 		"bulma": "^0.9.4",
 		"codemirror": "^6.0.1",
 		"cookie": "^0.4.1",
+		"d3": "^7.8.5",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"jsonwebtoken": "^9.0.0",
