--- a/package.json
+++ b/package.json
@@ -1,40 +1,35 @@
 {
 	"name": "@edwinspire/libapiserver",
 	"version": "0.1.0",
-	"main": "index.js",
+	"description": "",
+	"main": "./src/lib/api/server.js",
 	"scripts": {
-		"dev_vite": "vite dev --host",
-		"build": "vite build",
 		"package": "svelte-kit package",
-		"preview": "vite preview",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
-		"format": "prettier --write --plugin-search-dir=. .",
 		"build_test": "vite build && node test/server.js",
 		"test": "node test/server.js",
-		"dev": "vite build && node test/server.js"
+		"dev": "vite build && node test/server.js",
+		"dev_vite": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.0",
-		"@types/cookie": "^0.5.1",
-		"@types/express": "^4.17.13",
-		"@types/jsonwebtoken": "^9.0.2",
-		"@types/ws": "^8.5.3",
-		"@typescript-eslint/eslint-plugin": "^5.27.0",
-		"@typescript-eslint/parser": "^5.27.0",
+		"@sveltejs/adapter-node": "^1.0.0-next.86",
+		"@sveltejs/kit": "^1.20.4",
 		"@vitejs/plugin-basic-ssl": "^1.0.1",
-		"eslint": "^8.16.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "next",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
-		"tslib": "^2.3.1",
+		"eslint": "^8.28.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-svelte": "^2.30.0",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.10.1",
+		"svelte": "^4.0.5",
+		"svelte-check": "^3.4.3",
 		"typescript": "^5.0.0",
-		"vite": "^4.3.0"
+		"vite": "^4.4.2"
 	},
 	"type": "module",
 	"dependencies": {
@@ -42,12 +37,8 @@
 		"@codemirror/lang-json": "^6.0.1",
 		"@codemirror/lang-sql": "^6.5.0",
 		"@codemirror/lint": "^6.2.2",
-		"@edwinspire/svelte-components": "github:edwinspire/svelte-components",
 		"@edwinspire/universal-fetch": "github:edwinspire/universal-fetch",
-		"@edwinspire/websocket_express": "github:edwinspire/websocket_express",
-		"@fontsource/fira-mono": "^4.5.0",
 		"@observablehq/plot": "^0.6.8",
-		"@sveltejs/adapter-node": "^1.0.0-next.86",
 		"aedes": "^0.49.0",
 		"bulma": "^0.9.4",
 		"codemirror": "^6.0.1",
@@ -61,7 +52,6 @@
 		"soap": "^1.0.0",
 		"sqlite3": "^5.1.6",
 		"tedious": "^16.1.0",
-		"websocket-stream": "^5.5.2",
-		"ws": "^8.13.0"
+		"websocket-stream": "^5.5.2"
 	}
 }
