--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@codemirror/lang-json": "^6.0.1",
 		"@codemirror/lang-sql": "^6.5.0",
 		"@codemirror/lint": "^6.2.2",
+		"@edwinspire/svelte-components": "github:edwinspire/svelte-components",
 		"@edwinspire/universal-fetch": "github:edwinspire/universal-fetch",
 		"@observablehq/plot": "^0.6.8",
 		"aedes": "^0.49.0",
