--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"jsonwebtoken": "^9.0.0",
+		"path-to-regexp": "^6.2.1",
 		"pg": "^8.11.0",
 		"sequelize": "^6.31.1",
 		"soap": "^1.0.0",
