--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
 		"@codemirror/lang-json": "^6.0.1",
 		"@codemirror/lang-sql": "^6.5.0",
 		"@codemirror/lint": "^6.2.2",
-		"@edwinspire/sequential-promises": "git+https://github.com/edwinspire/sequential-promises.git",
+		"@edwinspire/sequential-promises": "github:edwinspire/sequential-promises#v0.01",
 		"@edwinspire/svelte-components": "github:edwinspire/svelte-components",
-		"@edwinspire/universal-fetch": "github:edwinspire/universal-fetch",
+		"@edwinspire/universal-fetch": "github:edwinspire/universal-fetch#v0.0.1",
 		"@observablehq/plot": "^0.6.8",
 		"aedes": "^0.49.0",
 		"bulma": "^0.9.4",
@@ -49,12 +49,16 @@
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"jsonwebtoken": "^9.0.0",
+		"mariadb": "^3.2.2",
+		"mysql2": "^3.6.3",
+		"oracledb": "^6.2.0",
 		"path-to-regexp": "^6.2.1",
-		"pg": "^8.11.0",
+		"pg": "^8.11.3",
+		"pg-hstore": "^2.3.4",
 		"sequelize": "^6.31.1",
 		"soap": "^1.0.0",
 		"sqlite3": "^5.1.6",
-		"tedious": "^16.1.0",
+		"tedious": "^16.6.0",
 		"uuid": "^9.0.0",
 		"websocket-stream": "^5.5.2"
 	}
