Agregado campo para cors, y uso de ultima version de componentes

--- a/package.json
+++ b/package.json
@@ -37,13 +37,14 @@
 		"@codemirror/lang-json": "^6.0.1",
 		"@codemirror/lang-sql": "^6.5.0",
 		"@codemirror/lint": "^6.2.2",
-		"@edwinspire/svelte-components": "github:edwinspire/svelte-components",
 		"@edwinspire/sequential-promises": "github:edwinspire/sequential-promises#v0.01",
+		"@edwinspire/svelte-components": "github:edwinspire/svelte-components",
 		"@edwinspire/universal-fetch": "github:edwinspire/universal-fetch#v0.0.1",
 		"aedes": "^0.49.0",
 		"bulma": "^0.9.4",
 		"codemirror": "^6.0.1",
 		"cookie": "^0.4.1",
+		"cors": "^2.8.5",
 		"d3": "^7.8.5",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
