--- a/package.json
+++ b/package.json
@@ -17,19 +17,23 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-node": "^1.0.0-next.86",
-		"@sveltejs/kit": "^1.26.0",
-		"@vitejs/plugin-basic-ssl": "^1.0.1",
+		"@fontsource/fira-mono": "^4.5.10",
+		"@neoconfetti/svelte": "^1.0.0",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^2.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/cookie": "^0.5.1",
+		"@vitejs/plugin-basic-ssl": "^1.0.2",
 		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
+		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.30.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"svelte": "^4.2.7",
+		"svelte-check": "^3.6.0",
 		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
@@ -39,7 +43,7 @@
 		"@codemirror/lint": "^6.2.2",
 		"@edwinspire/sequential-promises": "github:edwinspire/sequential-promises#v0.01",
 		"@edwinspire/svelte-components": "github:edwinspire/svelte-components",
-		"@edwinspire/universal-fetch": "github:edwinspire/universal-fetch#v0.0.1",
+		"@edwinspire/universal-fetch": "github:edwinspire/universal-fetch#v0.0.2",
 		"aedes": "^0.49.0",
 		"bulma": "^0.9.4",
 		"codemirror": "^6.0.1",
