--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-	"name": "prueba-esqueleto",
+	"name": "libapiserver",
 	"version": "0.0.1",
-	"private": true,
 	"scripts": {
 		"build": "vite build",
 		"preview": "vite preview",
@@ -29,7 +28,7 @@
 		"svelte-check": "^3.6.0",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
-		"@sveltejs/adapter-node": "^2.0.0",
+		"@sveltejs/adapter-node": "^2.0.2",
 		"@edwinspire/svelte-components": "github:edwinspire/svelte-components"
 	},
 	"type": "module",
